undo causes crash after enabling a new rigid body when scene uses a referenced rigid body world #52551

Closed
opened 2017-08-26 05:56:03 +02:00 by Kristian Halvorsen · 6 comments

System Information
windows 7 professional 64-bit
NVIDIA GeForce GT 650M

Blender Version
Broken:
2.78 4bb1e22
2.79 RC2 7b397cd
2.79 58d92ce

Short description of error
After linking a rigid body world from a different blender file, and setting it as the rigid body world for the current blender file.
Setting a new object as a rigid body, then performing an undo, causes blender to crash.

Some observations:
(Even when more actions are performed after enabling the rigid body physics, undo still crashes blender)
(enabling the rigid body physics, then saving the file and reopening it, results in the object not taking part in the simulation after the file is reopened, and
performing undo is no longer a problem. Unless of course you disable and re-enable the rigid body physics of the object again.)

Exact steps for others to reproduce the error
have main.blend and rigid system.blend in the same folder for the referencing to work
open main.blend
enable rigid body physics for bottom cube
undo

rigid system.blend

main.blend

**System Information** windows 7 professional 64-bit NVIDIA GeForce GT 650M **Blender Version** Broken: 2.78 4bb1e22 2.79 RC2 7b397cd 2.79 58d92ce **Short description of error** After linking a rigid body world from a different blender file, and setting it as the rigid body world for the current blender file. Setting a new object as a rigid body, then performing an undo, causes blender to crash. Some observations: (Even when more actions are performed after enabling the rigid body physics, undo still crashes blender) (enabling the rigid body physics, then saving the file and reopening it, results in the object not taking part in the simulation after the file is reopened, and performing undo is no longer a problem. Unless of course you disable and re-enable the rigid body physics of the object again.) **Exact steps for others to reproduce the error** have main.blend and rigid system.blend in the same folder for the referencing to work open main.blend enable rigid body physics for bottom cube undo [rigid system.blend](https://archive.blender.org/developer/F726449/rigid_system.blend) [main.blend](https://archive.blender.org/developer/F726450/main.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @krisoyo

Added subscriber: @krisoyo

#52718 was marked as duplicate of this issue

#52718 was marked as duplicate of this issue
Bastien Montagne self-assigned this 2017-08-26 16:56:53 +02:00

Issue here is that you should not be able to make the bottom cube a rigidbody, since that would mean adding it to a linked datablock (group in 2.7x, collection in 2.8x). This is just not allowed, will tweak the operator to check that.

Issue here is that you should not be able to make the bottom cube a rigidbody, since that would mean adding it to a linked datablock (group in 2.7x, collection in 2.8x). This is just not allowed, will tweak the operator to check that.

This issue was referenced by 1342d1879e

This issue was referenced by 1342d1879e121b1cf4118a232139d906a7da1ee6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52551
No description provided.