Fix T52551: undo causes crash after enabling a new rigid body when scene uses a referenced rigid body world.

Poll functions were not correct here, we cannot make objects part of
rigidbody sim if the RB collection is a linked one...